--- a/package.json
+++ b/package.json
@@ -1,10 +1,5 @@
 {
   "devDependencies": {
-    "browser-sync": "^2.2.1",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-jshint": "^1.9.2",
-    "gulp-sass": "^1.3.3",
-    "gulp-uglify": "^1.1.0"
+    "gulp": "^3.8.11"
   }
 }
