--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "flowcheck": "^0.2.3",
     "flowcheck-loader": "^1.0.0",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
     "gulp-util": "^3.0.4",
     "jsx-loader": "^0.12.2",
     "react-hot-loader": "^1.1.7",
