--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "climbing-app",
   "version": "0.0.1",
-  "main": "app/main.js",
-  "author": "Jason LeMoine",
+  "description": "Mythical climbing site app.",
+  "keywords": ["climbing"],
+  "homepage": "http://github.com/ishotfirst/climbing",
+  "bug": "http://github.com/ishotfirst/climbing/issues",
+  "author": "Jason LeMoine <jason.lemoine@gmail.com> (http://ishotfirst.github.io/)",
   "license": "MIT",
+  "main": "app/main.js",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/ishotfirst/climbing.git"
+  },
   "devDependencies": {
     "flowcheck": "^0.2.3",
     "flowcheck-loader": "^1.0.0",
@@ -17,5 +25,6 @@
   },
   "dependencies": {
     "react": "^0.12.2"
-  }
+  },
+  "private": true
 }
