--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "url": "http://github.com/ishotfirst/climbing.git"
   },
   "devDependencies": {
+    "del": "^1.1.1",
     "file-loader": "^0.8.1",
     "flowcheck": "^0.2.3",
     "flowcheck-loader": "^1.0.0",
     "gulp": "^3.8.11",
     "gulp-clean": "^0.3.1",
+    "gulp-specificity-graph": "^0.0.1-beta",
     "gulp-util": "^3.0.4",
     "jsx-loader": "^0.12.2",
     "react-hot-loader": "^1.1.7",
@@ -28,6 +30,7 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
+    "flux": "^2.0.1",
     "react": "^0.12.2"
   },
   "private": true
