--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "climbing-app",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Mythical climbing site app.",
   "keywords": [
     "climbing",
-    "blanket",
     "react",
     "flow",
     "flowcheck",
@@ -19,17 +18,21 @@
   "main": "app/js/main.js",
   "scripts": {
     "clean": "rimraf build",
-    "copy-html": "mkdirp build && echo `cp app/index.html build/index.html`",
-    "serve": "node server.js",
-    "start": "npm run copy-html & npm run serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild:html": "npm run clean -s && mkdirp build -s",
+    "build:html": "echo `cp app/*.html build/`",
+    "open:dev": "open http://localhost:8080/webpack-dev-server/",
+    "prestart": "npm run build:html -s && npm run open:dev -s",
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version:patch": "npm version patch --sign-git-tag=true -m 'Bumped version to %s'",
+    "version:minor": "npm version minor --sign-git-tag=true -m 'Bumped version to %s'",
+    "version:major": "npm version major --sign-git-tag=true -m 'Bumped version to %s'"
   },
   "repository": {
     "type": "git",
     "url": "http://github.com/ishotfirst/climbing.git"
   },
   "devDependencies": {
-    "blanket": "^1.1.6",
     "css-loader": "^0.9.1",
     "cssnext-loader": "^1.0.1",
     "file-loader": "^0.8.1",
@@ -37,6 +40,7 @@
     "flowcheck-loader": "^1.0.0",
     "jsx-loader": "^0.12.2",
     "mkdirp": "^0.5.0",
+    "opener": "^1.4.0",
     "postcss": "^4.0.6",
     "postcss-loader": "^0.3.0",
     "postcss-mixins": "^0.1.1",
