--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
-dist
-resources
+### SublimeText ###
+*.sublime-workspace
+*.sublime-project
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# App specific
+
+node_modules/
+coverage/
+dist/
+docs/
+.tmp
