--- a/package.json
+++ b/package.json
@@ -1,61 +1,55 @@
 {
   "name": "climbing-app",
-  "version": "0.0.0",
-  "description": "Mythical climbing site app.",
+  "version": "0.0.0-beta.1",
+  "description": "Mythical climbing app.",
   "keywords": [
     "climbing",
-    "react",
-    "flow",
-    "flowcheck",
-    "flux",
-    "postcss",
-    "webpack"
+    "react"
   ],
-  "homepage": "http://github.com/ishotfirst/climbing",
-  "bug": "http://github.com/ishotfirst/climbing/issues",
-  "author": "Jason LeMoine <jason.lemoine@gmail.com> (http://jasonlemoine.com)",
+  "homepage": "http://github.com/notaurologist/climbing",
+  "bug": "http://github.com/notaurologist/climbing/issues",
+  "author": "Jason LeMoine <github@lemoine.io> (http://www.jasonlemoine.com)",
   "license": "MIT",
-  "main": "src/js/app.js",
+  "main": "src/main.js",
   "scripts": {
-    "clean": "rimraf dist",
-    "prebuild:html": "npm run clean -s && mkdirp dist -s",
-    "build:html": "echo `cp src/*.html dist/`",
-    "open:dev": "open http://localhost:8080/webpack-dev-server/",
-    "prestart": "npm run build:html -s && npm run open:dev -s",
-    "start": "node server.js",
-    "test": "jest",
     "version:patch": "npm version patch --sign-git-tag=true -m 'Bumped version to %s'",
     "version:minor": "npm version minor --sign-git-tag=true -m 'Bumped version to %s'",
     "version:major": "npm version major --sign-git-tag=true -m 'Bumped version to %s'"
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/ishotfirst/climbing.git"
-  },
-  "devDependencies": {
-    "css-loader": "^0.9.1",
-    "cssnext-loader": "^1.0.1",
-    "file-loader": "^0.8.1",
-    "flowcheck": "^0.2.3",
-    "flowcheck-loader": "^1.0.0",
-    "jest-cli": "^0.4.0",
-    "jsx-loader": "^0.12.2",
-    "mkdirp": "^0.5.0",
-    "postcss": "^4.0.6",
-    "postcss-loader": "^0.3.0",
-    "postcss-mixins": "^0.1.1",
-    "postcss-nested": "^0.2.2",
-    "react-hot-loader": "^1.1.7",
-    "rimraf": "^2.3.2",
-    "style-loader": "^0.8.3",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.7.2",
-    "webpack-dev-server": "^1.7.0"
+    "url": "http://github.com/notaurologist/climbing.git"
   },
   "dependencies": {
-    "flux": "^2.0.1",
-    "normalize.css": "^3.0.2",
-    "react": "^0.12.2"
+    "react": "^15.1.0"
   },
-  "private": true
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-check-es2015-constants": "^6.8.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.8.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.9.0",
+    "babel-plugin-transform-es2015-classes": "^6.9.0",
+    "babel-plugin-transform-es2015-computed-properties": "^6.8.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
+    "babel-plugin-transform-es2015-for-of": "^6.8.0",
+    "babel-plugin-transform-es2015-function-name": "^6.9.0",
+    "babel-plugin-transform-es2015-literals": "^6.8.0",
+    "babel-plugin-transform-es2015-object-super": "^6.8.0",
+    "babel-plugin-transform-es2015-parameters": "^6.9.0",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.8.0",
+    "babel-plugin-transform-es2015-spread": "^6.8.0",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.8.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.8.0",
+    "babel-plugin-transform-es2015-typeof-symbol": "^6.8.0",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.8.0",
+    "babel-plugin-transform-react-constant-elements": "^6.8.0",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "eslint": "^2.11.0",
+    "eslint-plugin-react": "^5.1.1",
+    "react-addons-test-utils": "^15.1.0"
+  }
 }
