--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-### SublimeText ###
-*.sublime-workspace
-*.sublime-project
-
 ### OSX ###
 .DS_Store
 .AppleDouble
@@ -15,21 +11,10 @@ Icon
 .Spotlight-V100
 .Trashes
 
-### Windows ###
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# App specific
+### App specific ###
 
 node_modules/
 coverage/
-dist/
+build/
 docs/
 .tmp
