--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,22 @@
   ], // http://eslint.org/docs/user-guide/configuring#extending-configuration-files
   "parser": "babel-eslint",          // https://github.com/babel/babel-eslint
   "plugins": [
-    "react"                          // https://github.com/yannickcr/eslint-plugin-react
-  ]
+    "react",                         // https://github.com/yannickcr/eslint-plugin-react
+    "jsx-a11y"                       // https://github.com/evcohen/eslint-plugin-jsx-a11y
+  ],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "rules": {
+    "jsx-a11y/href-no-hash": 2,
+    "jsx-a11y/label-has-for": 2,
+    "jsx-a11y/mouse-events-have-key-events": 2,
+    "jsx-a11y/role-has-required-aria-props": 2,
+    "jsx-a11y/role-supports-aria-props": 2,
+    "jsx-a11y/aria-props": 2
+  }
 }
