--- a/package.json
+++ b/package.json
@@ -10,32 +10,67 @@
   "bug": "http://github.com/notaurologist/climbing/issues",
   "author": "Jason LeMoine <github@lemoine.io> (http://www.jasonlemoine.com)",
   "license": "MIT",
-  "main": "src/main.js",
+  "main": "app/main.js",
   "scripts": {
-    "build": "rollup src/main.js --output build/bundle.js",
+    "prebabel": "rimraf lib",
+    "babel": "babel src --out-dir lib",
+    "prebuild": "rimraf build && npm run test",
+    "build": "npm run webpack -- --config ./webpack/webpack.dev.config.js",
+    "build:devel": "NODE_ENV=development npm run build",
+    "build:production": "NODE_ENV=production npm run webpack -- --config ./webpack/webpack.prod.config.js",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint .",
+    "lint:css": "stylelint ./app/**/*.css",
+    "start": "npm run wds",
+    "start:devel": "NODE_ENV=development npm run start",
+    "start:production": "NODE_ENV=production npm run webpack-dev-server -- -p --config ./webpack/webpack.prod.config.js",
+    "test": "mocha -- .enzyme.js 'test/**/*Spec.js'",
+    "test:watch": "npm run test -- -w",
     "version:patch": "npm version patch --sign-git-tag=true -m 'Bumped version to %s'",
     "version:minor": "npm version minor --sign-git-tag=true -m 'Bumped version to %s'",
-    "version:major": "npm version major --sign-git-tag=true -m 'Bumped version to %s'"
+    "version:major": "npm version major --sign-git-tag=true -m 'Bumped version to %s'",
+    "wds": "npm run webpack-dev-server -- --config ./webpack/webpack.dev.config.js",
+    "webpack": "babel-node -- ./node_modules/.bin/webpack --progress",
+    "webpack-dev-server": "babel-node -- ./node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
     "url": "http://github.com/notaurologist/climbing.git"
   },
   "dependencies": {
-    "react": "^15.1.0"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
+    "babel-cli": "^6.9.0",
     "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.8.0",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
+    "babel-preset-es2015": "^6.4.1",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "eslint": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.18.0",
+    "postcss": "^5.0.21",
+    "postcss-loader": "^0.9.1",
+    "progress-bar-webpack-plugin": "^1.8.0",
     "react-addons-test-utils": "^15.1.0",
-    "rollup": "^0.26.3",
-    "rollup-plugin-babel": "^2.4.0",
-    "rollup-plugin-json": "^2.0.0"
+    "rimraf": "^2.5.2",
+    "sanitize.css": "^3.3.0",
+    "style-loader": "^0.13.1",
+    "stylelint": "^6.5.1",
+    "stylelint-config-standard": "^8.0.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
