--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
+  "presets": ["es2015", "react"],
   "env": {
+    "development": {
+      "presets": ["react-hmre"]
+    },
     "production": {
       "plugins": [
         "transform-react-remove-prop-types",
@@ -7,6 +11,5 @@
         "transform-react-constant-elements"
       ]
     }
-  },
-  "presets": ["es2015", "react"]
+  }
 }
