--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "why-did-you-update": "^0.0.8"
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
