--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "build": "webpack",
     "build:devel": "NODE_ENV=development npm run build -- --config ./webpack/webpack.dev.config.js",
     "build:production": "NODE_ENV=production npm run webpack -- --config ./webpack/webpack.prod.config.js",
+    "esformat": "esformatter --config .esformatterrc -i 'app/{src,test}/**/*.js'",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "eslint --fix ./src/**/*.js",
-    "lint:css": "stylelint ./src/**/*.css",
+    "lint:js": "eslint --fix app/{src,test}/*",
+    "lint:css": "stylelint 'app/src/**/*.css'",
     "test": "echo 'boo-urns'",
     "test:watch": "npm run test -- -w",
     "start": "babel-node ./app/server.js"
@@ -32,6 +33,8 @@
     "url": "http://github.com/notaurologist/climbing.git"
   },
   "dependencies": {
+    "babel-runtime": "^6.9.2",
+    "node-uuid": "^1.4.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -45,13 +48,17 @@
     "babel-plugin-transform-react-constant-elements": "^6.8.0",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.4.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
     "enzyme": "^2.3.0",
+    "esformatter": "^0.9.5",
+    "esformatter-jsx": "^7.0.0",
     "eslint": "^2.11.0",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
@@ -61,7 +68,9 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.18.0",
     "postcss": "^5.0.21",
+    "postcss-cssnext": "^2.6.0",
     "postcss-loader": "^0.9.1",
+    "postcss-remove-root": "0.0.2",
     "progress-bar-webpack-plugin": "^1.8.0",
     "react-addons-perf": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
