--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "http://github.com/notaurologist/climbing.git"
   },
   "dependencies": {
-    "babel-runtime": "^6.9.2",
+    "babel-polyfill": "^6.9.1",
     "node-uuid": "^1.4.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
@@ -48,17 +48,16 @@
     "babel-plugin-transform-react-constant-elements": "^6.8.0",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
-    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.4.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
     "enzyme": "^2.3.0",
     "esformatter": "^0.9.5",
     "esformatter-jsx": "^7.0.0",
     "eslint": "^2.11.0",
-    "eslint-loader": "^1.3.0",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
